--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="main m-auto">
         <div class="content">
-            <div class="header d-flex justify-content-between align-items-center">
+            <div class="header d-flex justify-content-between align-items-center py-3">
                 <div class="logo">
                     <span class="logo fw-bold">MonMon</span>
                     <span class="d-flex lokasi align-items-center gap-1">
@@ -314,10 +314,25 @@
             </div>
 
         </div>
-    </div>
-    <div class="footer">
 
-    </div>
+        <div class="footer d-flex justify-content-between align-items-center">
+            <a href="#" class="active d-flex flex-column justify-content-center align-items-center text-center">
+                <img src="assets/home-2.png" alt="">
+                Home
+            </a>
+            <a href="#" class="d-flex flex-column justify-content-center align-items-center text-center">
+                <img src="assets/discount-1.png" alt="">
+                Promo
+            </a>
+            <a href="#" class="d-flex flex-column justify-content-center align-items-center text-center">
+                <img src="assets/promo-code.png" alt="">
+                Voucher
+            </a>
+            <a href="#" class="d-flex flex-column justify-content-center align-items-center text-center">
+                <img src="assets/user.png" alt="">
+                Akun
+            </a>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
