--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 
                 </div>
 
-                <button class="btn-prev fw-bold  align-items-center"> <img src="assets/previus.png" alt=""> </button>
-                <button class="btn-next  align-items-center"> <img src="assets/next.png" alt=""></button>
+                <button class="btn-prev fw-bold  align-items-center"> <i class="fa-solid fa-chevron-left text-white"></i> </button>
+                <button class="btn-next  align-items-center"> <i class="fa-solid fa-chevron-right text-white"></i></button>
             </div>
 
             <div class="d-flex justify-content-between align-items-center mt-5">
@@ -205,8 +205,9 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn-prev fw-bold  align-items-center"> <img src="assets/previus.png" alt=""> </button>
-                <button class="btn-next  align-items-center"> <img src="assets/next.png" alt=""></button>
+               
+                <button class="btn-prev fw-bold  align-items-center"> <i class="fa-solid fa-chevron-left text-white"></i> </button>
+                <button class="btn-next  align-items-center"> <i class="fa-solid fa-chevron-right text-white"></i></button>
             </div>
 
             <div class="d-flex justify-content-between align-items-center mt-5">
